objects/OAH_Event__c.object
<CustomObject>
    <label>OAH Event</label>
    <nameField>
        <displayFormat>Event{YYYY}{0000}</displayFormat>
        <label>OAH Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAH Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Via_Phone__c</fullName>
        <label>Attend Via Phone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petitioner (P)</fullName>
                </value>
                <value>
                    <fullName>Respondent (R)</fullName>
                </value>
                <value>
                    <fullName>Both (B)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <formula>DateValue( Event_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Room__c</fullName>
        <label>Event Room</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Location__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hearings Room 1</fullName>
                </value>
                <value>
                    <fullName>Hearings Room 1 (multi-day hearing)</fullName>
                </value>
                <value>
                    <fullName>Hearings Room 2</fullName>
                </value>
                <value>
                    <fullName>James Kaliokalani</fullName>
                </value>
                <value>
                    <fullName>King Kalakaua</fullName>
                </value>
                <value>
                    <fullName>MICP Room</fullName>
                </value>
                <value>
                    <fullName>Prince Leleiohoku</fullName>
                </value>
                <value>
                    <fullName>Princess Likelike</fullName>
                </value>
                <value>
                    <fullName>Queen Liliuokalani</fullName>
                </value>
                <value>
                    <fullName>Ralph Rosenberg-Maui</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <formula>/* 36,000,000 = 10 * 60 * 60 * 1000 */
/* 79,200,000 = 22 * 60 * 60 * 1000 */
/*            HH   MM   SS   MS   */

/* IF(logical_test, value_if_true, value_if_false)  */
IF( HOUR( TIMEVALUE( Event_Start_Date__c ) - 36000000) &lt; 12,
TEXT( HOUR( TIMEVALUE( Event_Start_Date__c ) - 36000000) ) &amp; &quot;:&quot; &amp; LPAD( TEXT( MINUTE( TIMEVALUE( Event_Start_Date__c ))), 2, &quot;0&quot;) &amp; &quot; AM&quot;,
TEXT( HOUR( TIMEVALUE( Event_Start_Date__c ) - 79200000) ) &amp; &quot;:&quot; &amp; LPAD( TEXT( MINUTE( TIMEVALUE( Event_Start_Date__c ))), 2, &quot;0&quot;) &amp; &quot; PM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Hearing Conference (PHC)</fullName>
                </value>
                <value>
                    <fullName>Status Conference (SC)</fullName>
                </value>
                <value>
                    <fullName>Hearing (H)</fullName>
                </value>
                <value>
                    <fullName>Motion (M)</fullName>
                </value>
                <value>
                    <fullName>Further Hearing (FH)</fullName>
                </value>
                <value>
                    <fullName>Further Status Conference (FSC)</fullName>
                </value>
                <value>
                    <fullName>Oral Argument (OA)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Hearing (RH)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Pre-Hearing Conference (RPHC)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Status Conference (RSC)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Oral Argument (ROA)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Motion (RM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Petitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petitioner-Old</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Events</relationshipLabel>
        <relationshipName>OAH_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proceeding__c</fullName>
        <label>Proceeding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FH</fullName>
                </value>
                <value>
                    <fullName>FSC</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>RPH</fullName>
                </value>
                <value>
                    <fullName>RSC</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Respondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respondent-Old</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Events (Respondent)</relationshipLabel>
        <relationshipName>OAH_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Notes__c</fullName>
        <label>Event Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Phone__c</fullName>
        <label>Event Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HO_Nickname__c</fullName>
        <formula>OAH_Case_Number__r.Hearings_Officer__r.CommunityNickname</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HO Nickname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldRecordId__c</fullName>
        <label>OldRecordId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Address__c</fullName>
        <description>Address of the location where the event will be held (for neighbor islands).</description>
        <label>Event Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Record_ID__c</fullName>
        <label>Old Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Reporter__c</fullName>
        <label>Court Reporter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oahu</fullName>
                    <default>true</default>
                    <label>Oahu</label>
                </value>
                <value>
                    <fullName>Hilo</fullName>
                </value>
                <value>
                    <fullName>Kona</fullName>
                </value>
                <value>
                    <fullName>Maui</fullName>
                </value>
                <value>
                    <fullName>Kauai</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Zoom</fullName>
                </value>
                <value>
                    <fullName>Teams</fullName>
                </value>
                <value>
                    <fullName>Webex</fullName>
                </value>
                <value>
                    <fullName>Video Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OAH_Petitioner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Petitioner</label>
        <referenceTo>OAH_Contact__c</referenceTo>
        <relationshipLabel>OAH Events (Attorney-Petitioners)</relationshipLabel>
        <relationshipName>OAH_Events2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OAH_Respondent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Respondent</label>
        <referenceTo>OAH_Contact__c</referenceTo>
        <relationshipLabel>OAH Events</relationshipLabel>
        <relationshipName>OAH_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Petitioner__c</fullName>
        <label>Old Petitioner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Respondent__c</fullName>
        <label>Old Respondent</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Via_Phone_abbr__c</fullName>
        <formula>CASE(Via_Phone__c ,
&quot;&quot;, &quot;&quot;,
TEXT(Via_Phone__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Via Phone abbr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type_abbr__c</fullName>
        <formula>CASE(Event_Type__c,
     &quot;&quot;, &quot;&quot;,
TEXT(Event_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type abbr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAH_Case_Number__c</fullName>
        <label>OAH Case Number</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipLabel>OAH Events</relationshipLabel>
        <relationshipName>OAH_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Old_Case_Number__c</fullName>
        <label>Old Case Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Via_Phone_abbr2__c</fullName>
        <formula>MID(
Via_Phone_abbr__c,
FIND(&quot;(&quot;, Via_Phone_abbr__c) + 1,
FIND(&quot;)&quot;, Via_Phone_abbr__c) - FIND(&quot;(&quot;, Via_Phone_abbr__c) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Via Phone abbr2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Type_abbr2__c</fullName>
        <formula>MID(
   Event_Type_abbr__c ,
   FIND(&quot;(&quot;, Event_Type_abbr__c) + 1,
   FIND(&quot;)&quot;, Event_Type_abbr__c) - FIND(&quot;(&quot;, Event_Type_abbr__c) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type abbr2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_custom</fullName>
        <columns>NAME</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Description__c</columns>
        <columns>Event_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>